# Tuzu

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .gitignore  dev.env  pyproject.toml  test.env
backend/src/backend/: run.py
backend/src/backend/blueprints/: control.py  members.py  session.py  todos.py
backend/src/backend/lib/: api_error.py  email.py
backend/src/backend/migrations/: 0.py  data.py  members.py
backend/src/backend/models/: members.py  todos.py
backend/src/backend/templates/: email.html  forgot_password.html  password_change.html  welcome.html
backend/tests/: conftest.py  test_rate_limit.py  test_run.py
backend/tests/blueprints/: test_control.py  test_members.py  test_session.py  test_todos.py
backend/tests/models/: test_members.py  test_todos.py
frontend/: package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  AuthContext.tsx  Router.tsx  ThemeProvider.tsx  ToastContext.tsx  index.tsx  model.ts  queries.tsx  query.ts  setupTests.ts  utils.tsx
frontend/src/components/: AccountMenu.tsx  CheckboxField.tsx  DateField.tsx  EmailField.tsx  FormActions.tsx  LazyLoadPasswordStrength.tsx  PasswordField.tsx  PasswordStrength.tsx  RequireAuth.tsx  ScrollToTop.tsx  TextField.tsx  Title.tsx  Toasts.tsx  Todo.tsx  TodoForm.tsx  TopBar.tsx
frontend/src/pages/: ChangePassword.tsx  ConfirmEmail.tsx  CreateTodo.tsx  ForgottenPassword.tsx  Login.tsx  Register.tsx  Todo.tsx
infrasturcture/: .ansible-vault  .gitignore  ansible.cfg  secrets.auto.tfvars  terraform.tfstate  terraform.tfstate.backup
tozo/backend/: pyproject.toml
tozo/frontend/: package-lock.json
tozo/infrasturcture/: github.tf  main.tf  secrets.auto.tfvars.vault
